[project]
name = "ComfyUI_StringEssentials"
description = "Essential string manipulation nodes for ComfyUI."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_StringEssentials"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bradsec"
DisplayName = "ComfyUI_StringEssentials"
Icon = ""