[project]
name = "comfyui_stringessentials"
description = "Easy to use string manipulation nodes for ComfyUI (strip/remove text strings or search and replace text strings). Particularly useful for modifying text prompts or results from LLM outputs. Nodes will be located under standard Add Node > utils menu. Node names: String Strip and String Replace"
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_StringEssentials"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bradsec"
DisplayName = "ComfyUI_StringEssentials"
Icon = ""