[project]
name = "comfyui_stringessentials"
description = "Simple string manipulation nodes for ComfyUI (strip/remove text strings, search and replace text strings, preview modified string outputs). Useful for modifying text prompts or results from LLM outputs. Nodes will be located under standard Add Node > utils menu. Node names: String Textbox, String Strip, String Multi Replace, String Conditional Append and String Preview."
version = "2.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_StringEssentials"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bradsec"
DisplayName = "ComfyUI_StringEssentials"
Icon = ""